@@ -25,7 +25,7 @@
 #define TOLERANCE (1e-5)
 
 /* now exceptions for targets/functions which would not pass */
-#if defined(__SDCC_hc08)
+#if defined(__SDCC_hc08) || defined(__SDCC_s08)
 #   define EXPF_DISABLED  (1)
 #endif
 
